--- a/sexual.html
+++ b/sexual.html
@@ -30,7 +30,7 @@
                 <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo " />
             </a>
             <div class="flex  lg:order-2 relative z-10">
-              <div class="hidden md:block btn bg-cyan-200  hover:bg-cyan-300 p-1 ">
+              <div class="hidden lg:block btn bg-cyan-200  hover:bg-cyan-300 p-1 ">
                 <a href="contactus.html" class="hidden md:block  relative z-20   text-black-900 font-semibold py-1 px-3  raleway ">Contact Us</a>
               </div>
                 <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
@@ -159,7 +159,7 @@
                     <div class="w-full flex flex-wrap justify-around gap-6">
                         <!-- Option Sections -->
                         <div class="container mx-auto flex justify-center relative z-10">
-                            <div class="w-10/12 flex  justify-between gap-6">
+                            <div class="w-10/12 flex flex-wrap md:flex-nowrap  justify-around gap-6">
                                 <!-- Part 1 -->
                                 <div class="w-full md:w-1/3 xl:w-2/6 flex flex-col items-baseline mb-6">
                                     <div class="option-section mb-6 flex justify-around items-center">
