--- a/faqs.html
+++ b/faqs.html
@@ -48,7 +48,7 @@
                       <img src="assets/images/banner-Star 2.png" alt="images" class="w-2/12">
                     </div>
                 </div>
-                <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+                <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 relative z-40">
                     <li>
                         <a href="index.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOME</a>
                     </li>
