--- a/contactus.html
+++ b/contactus.html
@@ -759,6 +759,19 @@
       
     <script src="/js/main.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      window.onscroll = function () {
+let header = document.querySelector("header");
+if (window.pageYOffset > 0) {
+  header.classList.add("sticky");
+  header.classList.add("bg-img-header1");
+  
+} else {
+  header.classList.remove("sticky");
+  header.classList.remove("bg-img-header1");
+}
+};
+</script>
   </body>
   
 </html>
