body page is complete

--- a/body.html
+++ b/body.html
@@ -503,7 +503,6 @@
                       </div>
                       <div class="w-full lg:w-3/12  items-center hidden lg:flex">
                           <a href="video.html" class="bg-cyan-200 hover:bg-teal-700 text-black font-semibold py-2 px-4  raleway ">More Videos</a>
-                          
                       </div>
                       <div class="body-video-first-image absolute left-[4.5%] w-11/12 md:left-[7.5%] top-[60%] md:w-5/12" >
                           <img src="assets/images/body-video-first.png" alt="body-video-image" class="max-w-full">
@@ -512,7 +511,7 @@
                           <img src="assets/images/body-vide-second.png" alt="body-video-image" class="max-w-full">
                       </div>
                   </div>
-                  <div class="w-full  flex justify-center items-center block lg:hidden  mt-40 md:mt-64 ">
+                  <div class="w-full  flex justify-center items-center block lg:hidden  mt-52 md:mt-40 lg:mt-64 lg:mt-0 ">
                     <a href="video.html" class="bg-cyan-200 hover:bg-cyan-300 text-black font-semibold py-2 px-4  raleway ">More Videos</a>
                      <!-- Button Container -->
 
