--- a/esella.html
+++ b/esella.html
@@ -351,7 +351,7 @@
                 <div class="benefit-container flex justify-center">
                   <div class="w-full ">
                     <!-- Header -->
-                    <div class="first-head text-start mb-0 lg:-mb-8">
+                    <div class="first-head text-start mb-0 lg:-mb-6">
                       <h4 class=" font-bold text-xl lg:text-3xl cormorant">
                         Benefits of BTL Emsella Treatment
                       </h4>
@@ -361,7 +361,7 @@
                     <div class="benefit-first-part flex flex-wrap items-center">
                       <!-- Text Section -->
                       <div class="w-full lg:w-3/6 text-start order-last lg:order-first">
-                        <p class="my-3 text-black raleway text-sm md:text-base">
+                        <p class="my-3 text-black raleway text-sm md:text-base hidden xl:block">
                           Experience the transformative advantages of BTL EMSELLA treatment:
                         </p>
           
