--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                                         type="submit"
                                         class=" bg-cyan-200 text-black font-semibold  px-4 py-3 hover:bg-cyan-300 transition raleway"
                                     >
-                                        Send Request
+                                       <a href="faqs.html"> Send Request</a>
                                     </button>
                                 </form>
                             </div>
