all page breadcrumb complete

--- a/blog.html
+++ b/blog.html
@@ -150,7 +150,7 @@
                             </a>
                             <p class="mb-3 font-normal text-color dark:text-gray-400 raleway">The Impact of North Los Angeles Climate on Women’s Skin...</p>
                             <div class="read-more flex justify-between items-center">
-                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway">
+                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway hover:text-gray-400">
                                 Read more
                                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -174,7 +174,7 @@
                             </a>
                             <p class="mb-3 font-normal text-color dark:text-gray-400 raleway">Laser hair removal is a popular cosmetic procedure in Los Angeles...</p>
                             <div class="read-more flex justify-between items-center">
-                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway">
+                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black hover:text-gray-400 raleway">
                                 Read more
                                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -198,7 +198,7 @@
                             </a>
                             <p class="mb-3 font-normal text-color dark:text-gray-400 raleway">Are you seeking a safe and effective way in Los Angeles to address...</p>
                             <div class="read-more flex justify-between items-center">
-                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway">
+                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black hover:text-gray-400 raleway">
                                 Read more
                                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -225,7 +225,7 @@
                             </a>
                             <p class="mb-3 font-normal text-color dark:text-gray-400 raleway">Springtime is symbol of freshness and newness. Here at Beauty in LA Clinic, we recommend that this is the time...</p>
                             <div class="read-more flex justify-between items-center">
-                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway">
+                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black hover:text-gray-400 raleway">
                                 Read more
                                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -249,7 +249,7 @@
                             </a>
                             <p class="mb-3 font-normal text-color dark:text-gray-400 raleway">Fillers are a way to create beautiful plump lips which can add youth and beauty to appearances...</p>
                             <div class="read-more flex justify-between items-center">
-                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway">
+                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black hover:text-gray-400 raleway">
                                 Read more
                                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -273,7 +273,7 @@
                             </a>
                             <p class="mb-3 font-normal text-color dark:text-gray-400 raleway">Acne is a skin problem that affects a majority of people in The US. It is estimated that over 85% of people...</p>
                             <div class="read-more flex justify-between items-center">
-                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black raleway">
+                              <a href="blogdetail.html" class="inline-flex items-center py-2.5 text-sm font-medium text-center text-black hover:text-gray-400 raleway">
                                 Read more
                                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
