--- a/faceAndNeck.html
+++ b/faceAndNeck.html
@@ -127,9 +127,9 @@
                                         </div>
                                         <div class="banner-crub flex justify-start lg:justify-start items-center">
                                             <div class="banner-crub-image mr-3">
-                                                <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
+                                                <a href="index.html"><img src="assets/body-images/home.png" alt="Home" class="w-10/12"></a>
                                             </div>
-                                            <p class="mr-3 text-white"> > </p>
+                                            <p class="mr-3 text-white"> <img src="assets/images/Icon.png" alt="" class=" "> </p>
                                             <p class="text-white cormorant text-xl">Face and Neck</p>
                                         </div>
                                     </div>
