--- a/video.html
+++ b/video.html
@@ -107,10 +107,10 @@
                                             <p class="text-color raleway">We use premium products for a <br> more natural result.</p>
                                         </div>
                                         <div class="banner-crub flex justify-start lg:justify-start items-center">
-                                            <div class="banner-crub-image mr-3">
-                                                <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
-                                            </div>
-                                            <p class="mr-3 text-white"> > </p>
+                                          <div class="banner-crub-image mr-3">
+                                            <a href="index.html"><img src="assets/body-images/home.png" alt="Home" class="w-10/12"></a>
+                                        </div>
+                                        <p class="mr-3 text-white"> <img src="assets/images/Icon.png" alt="" class=" "> </p>
                                             <p class="text-white cormorant text-xl">video</p>
                                         </div>
                                     </div>
